--- a/css/body.css
+++ b/css/body.css
@@ -67,3 +67,13 @@ input[name=sujet] {
 form {
 	font-family: monospace;
 }
+/*Classement*/
+table {
+    border-collapse: collapse;
+}
+td, th {
+    border: 1px solid #000;
+    background-color: #d5f7d5;
+    padding: 15px;
+    margin-bottom: 10px;
+}
